--- a/style.css
+++ b/style.css
@@ -133,9 +133,9 @@ hr {
   margin-bottom: 30px;
   position: relative;
 } */
-.column {
+/* .column {
   width: 40%;
-}
+} */
 #selfintro img {
   border-radius: 20px;
   margin-left: 50px;
