--- a/style.css
+++ b/style.css
@@ -133,41 +133,20 @@ hr {
   margin-bottom: 30px;
   position: relative;
 } */
-/* .column {
+.column {
   width: 40%;
-} */
+}
 #selfintro img {
   border-radius: 20px;
   margin-left: 50px;
 }
 
 /* 自己紹介の表について */
-#selfintro .flex {
-  display: flex;
-  align-items: flex-start;
-  gap: 20px; /* 画像とテーブルの間に余白 */
-}
-
-/* 画像カラム */
-.column {
-  flex: 1 1 40%;
-}
-#selfintro img {
-  width: 100%;
-  max-width: 300px; /* 大きすぎ防止 */
-  border-radius: 20px;
-  margin-left: 0;   /* PCでも左寄せに */
-}
-/* 変更前
-  #introtable {
+#introtable {
   margin-top: -227px;
   margin-left: 28%;
   margin-right: 5%;
   width: 100%;
-} */
-#introtable {
-  flex: 1 1 60%;
-  margin: 0; /* 変な位置調整をリセット */
 }
 table {
   border-spacing: 0;
@@ -190,19 +169,19 @@ th, td {
   padding: 0.8rem;
 }
 
-/* スマホ用：縦並びにする */
 @media only screen and (max-width: 768px) {
-  #selfintro .flex {
-    flex-direction: column;
-    align-items: center;
+  .column-40 {
+    width: 100%;
+    margin-bottom: 30px;
   }
-
-  .column, #introtable {
+  .column-55 {
     width: 100%;
   }
-
-  #introtable table {
-    font-size: 14px;
+  #selfintro h3 {
+    font-size: 17px;
+  }
+  #introtable dl {
+    font-size: 13px;
   }
 }
 
