--- a/template/template.html
+++ b/template/template.html
@@ -41,7 +41,7 @@
   <main>
     <!-- トップ画像（サムネイル）を表示 -->
     <section id="hero" class="container">
-      <div class="hero_inner"></div>
+      <img src="./images/top_image.jpg" alt="">
     </section>
 
     <section id="concept" class="container">
@@ -88,14 +88,18 @@
             これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
           </p>
         </div>
-        <div class="column-2 concept-img"></div>
+        <div class="column-2">
+          <img src="./images/top_image.jpg" alt="">
+        </div>
       </div>
 
     -->
     <!-- テンプレ2　左が「画像」、右が「文章」 
 
      <div class="flex">
-        <div class="column-2 concept-img"></div>
+        <div class="column-2">
+          <img src="./images/top_image.jpg" alt="">
+        </div>
         <div class="column-2">
           <p class="text">
             これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
