--- a/template/template.html
+++ b/template/template.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../reset.css">
 
   <!-- style.css -->
-  <link rel="stylesheet" href="template.css">
+  <link rel="stylesheet" href="../template/template.css">
   
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
 
     <section id="subject" class="container">
       <h2 class="title pop">Portfolio</h2>　<!-- (Portfolio)or(Study Notebook) -->
-      <h3>GASで作る、業務効率化ツール！</h3>
+      <h3>このホームページ</h3>
       <div class="column">
         <p class="text">
           これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
