--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ th, td {
   height: auto;
   padding-top: 56.25%;
   background: #bbb;
+  background-position: center;
   background-size: cover;
   box-sizing: border-box;
 }
