--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ th, td {
   padding-top: 56.25%;
   background: #bbb;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   box-sizing: border-box;
   align-items: center;
   overflow: hidden;
