--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ th, td {
   box-shadow: 0 4px 15px rgba(0,0,0,.2)
 }
 .card__imgframe{
-  width: 100%;
+  width: auto;
   height: auto;
   padding-top: 56.25%;
   background: #bbb;
