--- a/style.css
+++ b/style.css
@@ -245,12 +245,11 @@ th, td {
   box-shadow: 0 4px 15px rgba(0,0,0,.2)
 }
 .card__imgframe{
-  width: 100px;
+  width: 100%;
   height: auto;
   padding-top: 56.25%;
   background: #bbb;
-  background-position: center;
-  background-size: cover;
+  background-size: auto;
   box-sizing: border-box;
 }
 .card__textbox{
