--- a/template/template.css
+++ b/template/template.css
@@ -96,6 +96,15 @@ header {
   line-height: 2;
 }
 
+/* `#subject` の横並びで画像/iframeの縦横比を維持しつつ48%幅に固定 */
+#subject .flex > img,
+#subject .flex > iframe {
+  flex: 0 0 48%;
+  max-width: 48%;
+  height: auto;
+  display: block;
+}
+
 @media only screen and (max-width: 768px) {
   .column {
     width: 100%;
@@ -114,6 +123,8 @@ header {
   #subject .flex > img,
   #subject .flex > iframe {
     width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
   }
 }
 
