--- a/template/template.css
+++ b/template/template.css
@@ -99,10 +99,18 @@ header {
 /* `#subject` の横並びで画像/iframeの縦横比を維持しつつ48%幅に固定 */
 #subject .flex > img,
 #subject .flex > iframe {
-  flex: 0 0 auto;
-  width: auto;
-  height: auto;
   display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* 画像・動画の比率を560:315(16:9に近い)で維持 */
+#subject .flex > img {
+  aspect-ratio: 560 / 315;
+  object-fit: cover;
+}
+#subject .flex > iframe {
+  aspect-ratio: 560 / 315;
 }
 
 @media only screen and (max-width: 768px) {
@@ -122,9 +130,8 @@ header {
   #subject .flex > .column-2,
   #subject .flex > img,
   #subject .flex > iframe {
-    width: auto;
-    max-width: none;
-    flex: 0 0 auto;
+    width: 100%;
+    max-width: 100%;
   }
 }
 
