--- a/template/template.html
+++ b/template/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title>Ken's Laboratory</title>
   
   <!-- リセットCSS -->
@@ -25,14 +25,14 @@
   <!-- ヘッダー（サイト名、メニュー） -->
   <header>
     <div class="container flex pop">
-      <a href="" class="logo">
+      <a href="../index.html#top" class="logo">
         <span>Ken's</span> Laboratory
       </a>
       <nav>
         <ul class="header_menu flex">
-          <li><a href="#about me">About me</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#studynotebook">StudyNotebook</a></li>
+          <li><a href="../index.html#about me">About me</a></li>
+          <li><a href="../index.html#portfolio">Portfolio</a></li>
+          <li><a href="../index.html#studynotebook">StudyNotebook</a></li>
         </ul>
       </nav>
     </div>
@@ -41,28 +41,40 @@
   <main>
     <!-- トップ画像（サムネイル）を表示 -->
     <section id="hero" class="container">
-      <img src="./images/top_image.jpg" alt="">
+      <img src="../images/Homepage_creation1.png" alt="">
     </section>
 
     <section id="subject" class="container">
       <h2 class="title pop">Portfolio</h2>　<!-- (Portfolio)or(Study Notebook) -->
-      <h3>このホームページ</h3>
+      <h3>Ken's Laboratory</h3>
+      <p class="text">最終更新日： <time datetime="2025-09-27">2025-09-27</time></p>
       <div class="column">
         <p class="text">
-          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          ここに文章を入力<br>
         </p>
       </div>
       <div class="flex">
         <div class="column-2">
           <p class="text">
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+            ここに文字を入力<br>
+            ここに文章を入力<br>
           </p>
         </div>
-        <div class="column-2 concept-img"></div>
+        <div class="column-2">
+          <img src="../images/Zen_study_webappimg.png" alt="">
+          <br>
+        </div>
+      </div>
+      <div class="flex">
+        <div class="column-2">
+          <p class="text">
+            ここに文字を入力<br>
+            ここに文章を入力<br>
+          </p>
+        </div>
+        <div class="column-2">
+          <iframe src="https://www.youtube.com/embed/GXu-7d3yA_U?si=3PmOO8XB9SfUA7Yw" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
@@ -114,7 +126,7 @@
     
   <!-- フッター（ページの一番下にロゴを表示） -->
   <footer>
-    <a href="" class="logo">
+    <a href="../index.html#top" class="logo">
       <span>Ken's</span> Laboratory
     </a>
     <div class="copyright">© Ken's Laboratory</div>
